--- a/mainpage.html
+++ b/mainpage.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Vino</h1>
     <p>Hi This is a test try in learning github.</p>
+    <p>change of update</p>
+    <p>update 2</p>
 
 </body>
 </html>
