--- a/mainpage.html
+++ b/mainpage.html
@@ -5,13 +5,33 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Complete responsive coffe shop website design</title>
+
+    <!--font awesome link-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
+    <!--css file link-->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Vino</h1>
-    <p>Hi This is a test try in learning github.</p>
-    <p>change of update</p>
-    <p>update 2</p>
+    <!--Header section-->
+    <header class="header">
+        <a href="#" class="logo">
+            <img src="images/logo.jpg" alt="logo">
+        </a>
+
+    </header>
+
+
+
+
+
+
+
+
+    <!--js file link-->>
+    <script src="script.js"></script>
+
 
 </body>
 </html>
