--- a/mainpage.html
+++ b/mainpage.html
@@ -17,8 +17,20 @@
     <!--Header section-->
     <header class="header">
         <a href="#" class="logo">
-            <img src="images/logo.jpg" alt="logo">
+            <img src="images/logo.jpg" alt="logo" style=" width:110px;height:90px">
         </a>
+
+        <nav class="navbar">
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#menu">Menu</a>
+            <a href="#products">Products</a>
+            <a href="#review">Review</a>
+            <a href="#contact">Contact</a>
+            <a href="#blogs">Blogs</a>
+        </nav>    
+        
+
 
     </header>
 
@@ -29,7 +41,7 @@
 
 
 
-    <!--js file link-->>
+    <!--js file link-->
     <script src="script.js"></script>
 
 
