--- a/mainpage.html
+++ b/mainpage.html
@@ -30,6 +30,17 @@
             <a href="#blogs">Blogs</a>
         </nav>    
         
+        <div class="icons">
+            
+            <div class="search" id="searchbtn">
+                <img src="images/shoppingcart.png" alt="cartlogo" style=" width:30px;height:30px">
+            </div>
+            <div class="cart" id="cartbtn">
+                <img src="images/search.png" alt="serach" style=" width:25px;height:25px">
+            </div>
+            <div class="menu" id="menubtn"></div>
+
+        </div>
 
 
     </header>
