--- a/mainpage.html
+++ b/mainpage.html
@@ -36,9 +36,11 @@
                 <img src="images/shoppingcart.png" alt="cartlogo" style=" width:30px;height:30px">
             </div>
             <div class="cart" id="cartbtn">
-                <img src="images/search.png" alt="serach" style=" width:25px;height:25px">
+                <img src="images/search.png" alt="search" style=" width:25px;height:25px">
             </div>
-            <div class="menu" id="menubtn"></div>
+            <div class="menu" id="menubtn">
+                <img src="images/home.png" alt="home" style=" width:25px;height:25px">
+            </div>
 
         </div>
 
