--- a/mainpage.html
+++ b/mainpage.html
@@ -17,7 +17,7 @@
     <!--Header section-->
     <header class="header">
         <a href="#" class="logo">
-            <img src="images/logo.jpg" alt="logo" style=" width:100px;height:80px">
+            <img src="images/logo.jpg" alt="logo" 
         </a>
 
         <nav class="navbar">
@@ -33,13 +33,13 @@
         <div class="icons">
             
             <div class="search" id="searchbtn">
-                <img src="images/shoppingcart.png" alt="cartlogo" style=" width:30px;height:30px">
+                <img src="images/shoppingcart.png" alt="cartlogo" style=" width:25px;height:25px">
             </div>
             <div class="cart" id="cartbtn">
                 <img src="images/search.png" alt="search" style=" width:25px;height:25px">
             </div>
             <div class="menu" id="menubtn">
-                <img src="images/home.png" alt="home" style=" width:25px;height:25px">
+                <img src="images/home.png" alt="home" style=" width:30px;height:30px">
             </div>
 
         </div>
