--- a/mainpage.html
+++ b/mainpage.html
@@ -44,6 +44,11 @@
 
         </div>
 
+        <div class="searchform">
+            <input type="search" id="serachbox" placeholder="search here...">
+            <label for="search-box" class="search"></label>
+        </div>
+
 
     </header>
 
