--- a/mainpage.html
+++ b/mainpage.html
@@ -49,6 +49,36 @@
             <label for="search-box" class="search"></label>
         </div>
 
+        <div class="cart-items-container">
+            <div class="cart-items">
+                <span class="times"></span>
+                <img src="cartitem1.png" alt="cartitem1">
+                <div class="content">
+                    <h3>cart item 01</h3>
+                    <div class="price">LKR5000</div>
+                </div>
+            </div>
+
+            <div class="cart-items">
+                <span class="times"></span>
+                <img src="cartitem2.png" alt="cartitem2" >
+                <div class="content">
+                    <h3>cart item 02</h3>
+                    <div class="price">LKR5000</div>
+                </div>
+            </div>
+
+            <div class="cart-items">
+                <span class="times"></span>
+                <img src="" alt="">
+                <div class="content">
+                    <h3>cart item 01</h3>
+                    <div class="price">LKR5000</div>
+                </div>
+            </div>
+
+        </div>
+
 
     </header>
 
