--- a/mainpage.html
+++ b/mainpage.html
@@ -86,7 +86,20 @@
     </header>
 
 
+<!--Home section-->
 
+    <section class="home" id="home">
+        <div class="content">
+            <h3>Fresh coffee in the morning</h3>
+            <p>Awaken your senses to the enchanting world of coffee,
+            where each cup whispers stories of aroma.</p>
+            <a href="#" class="btn">Get yours now</a>
+        </div>
+
+    </section>
+
+
+<!--About section-->
 
 
 
