--- a/mainpage.html
+++ b/mainpage.html
@@ -101,6 +101,33 @@
 
 <!--About section-->
 
+<section class="about" id="about">
+    <h1 class="heading"><span>about</span> us </h1>
+    <div class="row">
+        <div class="image">
+            <img src="images/about.jpg" alt="about image">
+        </div>
+
+        <div class="content">
+            <h3>What makes our coffee special?</h3>
+            <p>Our coffee is meticulously sourced from the world's finest coffee regions, 
+            where passionate farmers cultivate exceptional 
+            beans that undergo a precise roasting process, 
+            resulting in a rich and nuanced flavor profile.</p>
+            <p>With a commitment to sustainability, 
+            we prioritize ethical practices at every step, 
+            ensuring not only a superb taste but also a positive impact 
+            on the environment and the communities that nurture our 
+            exceptional coffee beans.</p>
+
+            <a href="#" class="btn">Learn more</a>
+        </div>
+    </div>
+
+</section>
+
+<!--Menu section-->
+
 
 
 
