--- a/mainpage.html
+++ b/mainpage.html
@@ -128,6 +128,81 @@
 
 <!--Menu section-->
 
+    <section class="menu" id="menu">
+        <h1 class="heading">Our <span> menu</span> </h1>
+        <div class="box-container">
+
+            <div class="box">
+                <img src="images/menu1.jpg" alt="menu1">
+                <h3>Tasty and Healthy </h3>
+                <div class="price"> LKR 5000<span>7000</span></div>
+                <a href="#" class="btn">add to cart</a>
+
+            </div>
+
+            <div class="box">
+                <img src="images/menu2.jpg" alt="menu2">
+                <h3>Tasty and Healthy </h3>
+                <div class="price"> LKR 5000<span>7000</span></div>
+                <a href="#" class="btn">add to cart</a>
+
+            </div>
+
+            <div class="box">
+                <img src="images/menu3.jpg" alt="menu3">
+                <h3>Tasty and Healthy </h3>
+                <div class="price"> LKR 5000<span>7000</span></div>
+                <a href="#" class="btn">add to cart</a>
+
+            </div>
+
+            <div class="box">
+                <img src="images/menu4.jpg" alt="menu4">
+                <h3>Tasty and Healthy </h3>
+                <div class="price"> LKR 5000<span>7000</span></div>
+                <a href="#" class="btn">add to cart</a>
+
+            </div>
+
+            <div class="box">
+                <img src="images/menu5.jpg" alt="menu5">
+                <h3>Tasty and Healthy </h3>
+                <div class="price"> LKR 5000<span>7000</span></div>
+                <a href="#" class="btn">add to cart</a>
+
+            </div>
+
+            <div class="box">
+                <img src="images/menu6.jpg" alt="menu6">
+                <h3>Tasty and Healthy </h3>
+                <div class="price"> LKR 5000<span>7000</span></div>
+                <a href="#" class="btn">add to cart</a>
+
+            </div>
+
+            <div class="box">
+                <img src="images/menu7.jpg" alt="menu7">
+                <h3>Tasty and Healthy </h3>
+                <div class="price"> LKR 5000<span>7000</span></div>
+                <a href="#" class="btn">add to cart</a>
+
+            </div>
+            <div class="box">
+                <img src="images/menu8.jpg" alt="menu8">
+                <h3>Tasty and Healthy </h3>
+                <div class="price"> LKR 5000<span>7000</span></div>
+                <a href="#" class="btn">add to cart</a>
+
+            </div>
+
+
+
+        </div>
+
+    </section>
+
+    <!--Products section-->
+
 
 
 
