--- a/mainpage.html
+++ b/mainpage.html
@@ -203,6 +203,95 @@
 
     <!--Products section-->
 
+    <section class="products" id="products">
+        <h1 class="heading">Our <span>products</span></h1>
+        <div class="box-container">
+
+            <div class="box">
+                <div class="icons">
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="images/product1.jpg" alt="product 1">
+                </div>
+
+
+            <div class="content">
+                <h3>fresh coffe</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+
+                </div>
+                <div class="price">LKR5000 <span>7000</span></div>
+            </div>
+                </div>
+
+
+            <div class="box">
+                <div class="icons">
+                    <a href="#" class="fas fa-shopping-cart"></a>
+                    <a href="#" class="fas fa-heart"></a>
+                    <a href="#" class="fas fa-eye"></a>
+                </div>
+                <div class="image">
+                    <img src="images/product2.jpg" alt="product 2">
+                </div>
+
+
+
+
+                <div class="content">
+                    <h3>fresh coffe</h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+
+                    </div>
+                    <div class="price">LKR5000 <span>7000</span></div>
+                </div>
+            </div>
+
+
+                <div class="box">
+                    <div class="icons">
+                        <a href="#" class="fas fa-shopping-cart"></a>
+                        <a href="#" class="fas fa-heart"></a>
+                        <a href="#" class="fas fa-eye"></a>
+                    </div>
+                    <div class="image">
+                        <img src="images/product3.jpg" alt="product 3">
+                    </div>
+
+
+
+
+                    <div class="content">
+                        <h3>fresh coffe</h3>
+                        <div class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+
+                        </div>
+                        <div class="price">LKR5000 <span>7000</span></div>
+                    </div>
+                </div>
+
+
+        </div>
+     </section>
+
 
 
 
