--- a/mainpage.html
+++ b/mainpage.html
@@ -293,6 +293,63 @@
      </section>
 
 
+    <!--Review Section-->
+
+    <section class="review" id="review">
+        <h1 class="heading"> Customer's <span>review</span></h1>
+        <div class="box-container">
+
+            <div class="box">
+                <img src="images/quoteimg.png" alt="Quote Image" class="quote">
+                <p>Content</p>
+                <img src="images/pic1.jpg" class="user" alt="Picture 1">
+                <h3>John Deo</h3>
+                <div class="stars">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star-half-alt"></i>
+                </div>
+                </div>
+
+                <div class="box">
+                    <img src="images/quoteimg.png" alt="Quote Image" class="quote">
+                    <p>Content</p>
+                    <img src="images/pic2.jpg" class="user" alt="Picture 2">
+                    <h3>John Deo</h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <img src="images/quoteimg.png" alt="Quote Image" class="quote">
+                    <p>Content</p>
+                    <img src="images/pic3.jpg" class="user" alt="Picture 3">
+                    <h3>John Deo</h3>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star-half-alt"></i>
+                    </div>
+                </div>
+
+            
+
+            </div>
+    
+
+
+    </section>
+
+
 
 
 
