--- a/mainpage.html
+++ b/mainpage.html
@@ -351,6 +351,84 @@
 
    <!-- Contact Section starts-->
 
+<section class="contact" id="contact">
+    <h1 class="heading"><span>contact</span> us </h1>
+    <div class="row">
+        <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4047213.2839410105!2d80.70625!3d7.857684999999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae2593cf65a1e9d%3A0xe13da4b400e2d38c!2sSri%20Lanka!5e0!3m2!1sen!2slk!4v1701324296389!5m2!1sen!2slk" 
+                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <form action="">
+            <h3>get in touch</h3>
+            <div class="inputBox">
+                <span class="fas fa-user"></span>
+                <input type="text" placeholder="name">
+            </div>
+
+            <div class="inputBox">
+                <span class="fas fa-envelope"></span>
+                <input type="email" placeholder="email">
+            </div>
+
+            <div class="inputBox">
+                <span class="fas fa-phone"></span>
+                <input type="number" placeholder="number">
+            </div>
+
+            <input type="submit" value="contact now" class="btn">
+
+        </form>
+    </div>
+</section>
+
+<!--blogs section-->
+
+<section class="blogs" id="blogs">
+    <h1 class="heading">Our <span>blogs</span></h1>
+    <div class="box-container">
+        <div class="box">
+            <div class="image">
+                <img src="images/blog1.jpg" alt="blog 1">
+            </div>
+
+            <div class="content">
+                <a href="#" class="title">Tasty and refreshing coffee</a>
+                <span>by admin / 30th Dec, 2023</span>
+                <p> Content</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog2.jpg" alt="blog 2">
+            </div>
+
+            <div class="content">
+                <a href="#" class="title">Tasty and refreshing coffee</a>
+                <span>by admin / 30th Dec, 2023</span>
+                <p> Content</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
+
+        <div class="box">
+            <div class="image">
+                <img src="images/blog3.jpg" alt="blog 3">
+            </div>
+
+            <div class="content">
+                <a href="#" class="title">Tasty and refreshing coffee</a>
+                <span>by admin / 30th Dec, 2023</span>
+                <p> Content</p>
+                <a href="#" class="btn">read more</a>
+            </div>
+        </div>
+
+    </div>
+
+</section>
+
+    <!--footer section-->
+
 
 
 
