--- a/mainpage.html
+++ b/mainpage.html
@@ -429,6 +429,28 @@
 
     <!--footer section-->
 
+    <section class="footer">
+        <div class="shar">
+            <a href="#" class="fab fa-facebook"></a>
+            <a href="#" class="fab fa-twitter"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-linkedin"></a>
+            <a href="#" class="fab fa-pinterest"></a>
+        </div>
+
+        <div class="links">
+            <a href="#">home</a>
+            <a href="#">about</a>
+            <a href="#">menu</a>
+            <a href="#">products</a>
+            <a href="#">review</a>
+            <a href="#">contact</a>
+            <a href="#">blogs</a>
+        </div>
+
+        <div class="credit">created by<span>Mr. web Designer</span> | all rights reserved|</div>
+</section>
+
 
 
 
